@@ -2,9 +2,10 @@ namespace Client {
 	
 	class IRCNetwork : GLib.Object {
 	
-		protected Gee.HashMap<string, IRChannel> hmpChannels;
+		public Gee.HashMap<string, IRChannel> hmpChannels;
 		public GLib.SocketConnection objConnection;
 		public DataInputStream objStream;
+		public string[] arrChannels;
 		public string strAddress;
 		public string intPort;
 		public string strNick;
@@ -12,23 +13,6 @@ namespace Client {
 		public string strReal;
 		public string blnAutojoin;
 		public string blnSSL;
-		
-		public async void setConnection(GLib.SocketConnection objConnection){
-			this.objConnection = objConnection;
-		}
-		
-		public async void setInputStream(DataInputStream objStream){
-			this.objStream = objStream;
-		}
-		
-		public async GLib.SocketConnection getConnection(){
-			return this.objConnection;
-		}
-		
-		public async DataInputStream getStream(){
-			return this.objStream;
-		}
-		
 		
 	}
 	
