@@ -2,7 +2,7 @@ namespace Client {
 
 	class Client {
 		
-		static void main(string[] arrArguments){
+		static void main(){
 			GLib.MainLoop objLoop = new GLib.MainLoop();
 			IRClient objBot = new IRClient();
 			objBot.readConfiguration();
