@@ -1,5 +1,5 @@
 # Configuration of Settings.ini is simple! Just make a class with the network name and in it put
-# The address, port, ssl bool, your name, nick, user, and channels (with a hash and a trailing slash determining autojoin with a boolean)
+# The address, port, ssl bool, your name, nick, user, channels (with a hash and a trailing slash determining autojoin with a boolean) and an auto-join boolean
 # Configuration is read as
 # Nick as Nick with the value of your nick
 # Real name as Real with the value of your [real] name
@@ -18,12 +18,12 @@ User = Anti_
 Channels = #brows/true #bots/true
 Autojoin = true
 
-[FreeNode]
-Address = irc.freenode.net
-Port = 6697
-SSL = true
-Nick = Anti_
-Real = Anti_
-User = Anti_
-Channels = #freenode/true
-Autojoin = true
+#[FreeNode]
+#Address = irc.freenode.net
+#Port = 6697
+#SSL = true
+#Nick = Anti_
+#Real = Anti_
+#User = Anti_
+#Channels = #freenode/true
+#Autojoin = true
